// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: Introduction Css renders 1`] = `
<Fragment>
  <h2
    id="css"
  >
    CSS
  </h2>
  <p>
    Copy-paste the stylesheet 
    <CodeTags
      code="<link>"
      type="primary"
    />
     into your 
    <CodeTags
      code="<head>"
      type="primary"
    />
     before all other stylesheets to load our CSS.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <link
      href="http://localhost/TEST/styles/TESTBRAND.css"
      rel="stylesheet"
    />
    <link
      href="http://localhost/TEST/styles/dg-dashboard.css"
      rel="stylesheet"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction JavaScript renders 1`] = `
<Fragment>
  <h2
    id="javascript"
  >
    JavaScript
  </h2>
  <p>
    The dashboard theme requires a separate script to run properly. So add the dashboard script below the 
    <CodeTags
      code="scripts"
      type="secondary"
    />
     at the bottom of your 
    <CodeTags
      code="<body>"
      type="primary"
    />
     tag like this:
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <script
      src="http://localhost/TEST/scripts/dg.js"
    />
    <script
      src="http://localhost/TEST/scripts/dg-dashboard.js"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction QuickStart renders 1`] = `
<Fragment>
  <h3
    id="quick-start"
  >
    Quick start
  </h3>
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>
</Fragment>
`;

exports[`Dashboard: Introduction renders 1`] = `
<Fragment>
  <h2
    id="introduction"
  >
    Introduction
  </h2>
  <p
    className="lead"
  >
    We are using 
    <a
      href="https://www.chartjs.org/"
      rel="noopener noreferrer"
      target="_blank"
    >
      chart.js
    </a>
     to generate the charts. Our script is mainly just a wrapper around that library to add the correct styling etc.
  </p>
  <p>
    Most options and settings available in the chart.js documentation will be available.
  </p>
  <p>
    For now, the following chart types are available:
  </p>
  <ul>
    <li>
      <CodeTags
        code="\\"line\\""
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code="\\"bar\\"/\\"horizontalBar\\""
        type="secondary"
      />
    </li>
    <li>
      <CodeTags
        code="\\"pie\\"/\\"doughnut\\""
        type="secondary"
      />
    </li>
  </ul>
  <QuickStart />
  <JavaScript />
</Fragment>
`;
